syntax = "proto3";

package messages.user;

option go_package = "service/src/proto/messages/user";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message User {
  string username = 1;
  string first_name = 2;
  string email = 3;
}
